--- a/starter_code/portfolio.html
+++ b/starter_code/portfolio.html
@@ -2,16 +2,52 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" >
     <title></title>
   </head>
   <body>
-    <nav>
-      <ul>
-        <li><a href="index.html" class="current_page" >About Me</a></li> |
-        <li><a href="portfolio.html">Portfolio</a></li>
-      </ul>
-    </nav>
+<nav>
+  <ul>
+    <li><a href="index.html"  >About Me</a></li> |
+    <li><a href="portfolio.html" class="current_page" >Portfolio</a></li>
+  </ul>
+</nav>
+<h1 title="Simon Westwood" >Simon Westwood</h1>
+<hr />
+
+<h3>Experience</h3>
+<p>I recently graduated from a Front-end Web Development course at General Assembly where I learned HTML, CSS, JavaScript, and jQuery and learned how to be an <b><em>awesome</em> </b>Front-end Web Developer. In my spare time I enjoy surfing, art and spending time in the gym.</p>
+<h4>Portfolio</h4>
+<p>Sed ac velit magna. Vestibulum in orci sollicitudin, molestie ex ut, posuere nibh. Maecenas maximus, metus nec maximus ornare, sem tellus ornare erat, at fermentum lorem nulla eu odio. Donec at ligula placerat, sagittis lacus sed, posuere ipsum. In enim nulla, laoreet ac volutpat id, congue a quam. Nunc tempus et mi at faucibus. Nulla velit sapien, luctus vel eleifend vel, luctus vehicula leo.</p>
+<ul>
+ <li><b><em>Web Developer</em></b>, Relaxr 2015 - present</li>
+</ul>
+<img src="images/relaxr_deliverable.png" alt="Relaxr" title="Relaxr" >
+
+<p>Vestibulum in orci sollicitudin, molestie ex ut, posuere nibh. Maecenas maximus, metus nec maximus ornare, sem tellus ornare erat, at fermentum lorem nulla eu odio. Donec at ligula placerat, sagittis lacus sed, posuere ipsum. In enim nulla, laoreet ac volutpat id, congue a quam. Nunc tempus et mi at faucibus. Nulla velit sapien, luctus vel eleifend vel, luctus vehicula leo.</p>
+<ul>
+ <li><b><em>Web Developer</em></b>, Startup Matchmaker 2014 - 2015</li>
+</ul>
+<img src="images/startup_matchmaker_deliverable.png" alt="Startup Matchmaker"  title="Startup Matchmaker" >
+<ul>
+ <li><b><em>Web Developer</em></b>, Startup Matchmaker 2014 - 2015</li>
+ <p>Maecenas maximus, metus nec maximus ornare, sem tellus ornare erat, at fermentum lorem nulla eu odio. Donec at ligula placerat, sagittis lacus sed, posuere ipsum. In enim nulla, laoreet ac volutpat id, congue a quam. Nunc tempus et mi at faucibus. Nulla velit sapien, luctus vel eleifend vel, luctus vehicula leo.</p>
+</ul>
+<img src="images/citipix_deliverable.png" alt="CitiPix" title="CitiPix" >
+<hr />
+
+<footer>
+  <nav>
+  <ul>
+    <li><a href="http://www.facebook.com" target="blank" >Facebook </a></li> |
+    <li><a href="https://twitter.com" target="blank" >Twitter </a></li> |
+    <li><a href="https://www.instagram.com" target="blank" >Instagram </a></li> |
+    <li><a href="https://au.linkedin.com" target="blank" >LinkedIn </a></li>
+  </ul>
+</nav>
+</footer>
 
   </body>
 </html>
