--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -21,7 +21,8 @@
 <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce cursus, sem et ultricies imperdiet, dolor neque laoreet mi, sed tempor nibh massa quis lorem. Sed eleifend in lacus vitae semper. Curabitur mollis ultrices cursus. Curabitur at elementum lorem. Sed lobortis nulla quis consectetur ornare. Nulla ultricies ligula a augue tempor, ut vestibulum libero porta. Sed ac eleifend orci, ullamcorper scelerisque est.</p>
 <p>Sed ac velit magna. Vestibulum in orci sollicitudin, molestie ex ut, posuere nibh. Maecenas maximus, metus nec maximus ornare, sem tellus ornare erat, at fermentum lorem nulla eu odio. Donec at ligula placerat, sagittis lacus sed, posuere ipsum. In enim nulla, laoreet ac volutpat id, congue a quam. Nunc tempus et mi at faucibus. Nulla velit sapien, luctus vel eleifend vel, luctus vehicula leo.</p>
 <hr />
-<nav>
+<footer>
+  <nav>
   <ul>
     <li><a href="http://www.facebook.com" target="blank" >Facebook </a></li> |
     <li><a href="https://twitter.com" target="blank" >Twitter </a></li> |
@@ -29,5 +30,7 @@
     <li><a href="https://au.linkedin.com" target="blank" >LinkedIn </a></li>
   </ul>
 </nav>
+</footer>
+
   </body>
 </html>
